--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <title>Latihan GIT - WEB II UBSI</title>
     </head>
     <body>
-        <p>latihan GIT coba-coba ready</p>
+        <p>latihan GIT coba-coba not ready</p>
     </body>
 </html>
